samples/_failures_safe/1761459663_198404_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c4f1aab2.c: In function ‘main’:
./samples/SAFE/__tmp_c4f1aab2.c:152:15: error: expected ‘;’ at end of input
  152 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_c4f1aab2.c:152:9: error: expected declaration or statement at end of input
  152 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_c4f1aab2.c:152:9: error: expected declaration or statement at end of input
